<resources>
    <string name="app_name" translatable="false">HDOpen</string>

    <string name="open_info" translatable="false">Open Info</string>
    <string name="fetch_service" translatable="false">Status getting service for OpenHD</string>
    <string name="info_button" translatable="false">Info button</string>
    <string name="intro_name" translatable="false">App Intro</string>

    <string name="channel_name">HDOpen notifications</string>
    <string name="background_channel_name">HDOpen background</string>
    <string name="channel_description">Channel for HDOpen notifications</string>
    <string name="background_channel_description">Channel for HDOpen background worker</string>
    <string name="welcome">Welcome to HDOpen</string>
    <string name="welcome_desc">Before starting you need to setup some settings, these can be changed later in the settings menu</string>


    <string name="open">Open</string>
    <string name="undefined">Undefined</string>
    <string name="closed">Closed</string>
    <string name="updated">Updated Status!</string>
    <string name="last_updated">%s: %s</string>
    <string name="new_version_description">Click to get info about the new version</string>
    <string name="new_version">A new version is available</string>
    <string name="version_info">Current version: %s\nNew version: %s\n\nChangelog:\n%s</string>
    <string name="download_button">Download</string>
    <string name="fetching_data">Fetching data from HD</string>
    <string name="close">Close</string>



    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_summary_vibrate">Vibrate on incoming notifications</string>
    <string name="pref_title_led">Phone LED</string>
    <string name="pref_summary_led">Flash LED on incoming notifications</string>
    <string name="pref_title_sound">Sound</string>
    <string name="pref_summary_sound">Emit sound on incoming notifications</string>


    <string name="pref_title_notify">Notify</string>
    <string name="pref_summary_notify">Enable notifications</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_summary_version">Show new app version notifications</string>
    <string name="pref_title_status">Status</string>
    <string name="pref_summary_status">Show status update notifications</string>
    <string name="pref_about">About</string>
    <string name="pref_version_build" translatable="false">App Version</string>
    <string name="pref_libraries">Used Libraries</string>
    <string name="recommended">Recommended</string>
    <string name="when">When</string>
    <string name="opt_in">Opt-in notifications when status changes</string>
    <string name="recommended_version">Recommended to get new version info</string>

    <!-- Libraries -->
    <string name="aboutLibraries_description_text"><![CDATA[Shows open status of HDs room Chassit at Chalmers<br/>Created by: <b>Gustaf Järgren</b>]]></string>
    <string name="ad_image_description" translatable="false">Image that shows an ad</string>
    <string name="pref_misc">Misc</string>
    <string name="pref_title_ad">\"Ads\"</string>
    <string name="pref_summary_ad">Allow \"Ads\" in the app</string>

</resources>
